--- a/sample/ICanPay.Demo/Views/Home/Index.cshtml
+++ b/sample/ICanPay.Demo/Views/Home/Index.cshtml
@@ -12,16 +12,16 @@
             <li><a href="#tabs-api-1">前言</a></li>
             <li><a href="#tabs-api-alipay">支付宝</a></li>
             <li><a href="#tabs-api-wechatpay">微信支付</a></li>
-            <li><a href="#tabs-api-qpay">QQ钱包</a></li>
-            <li><a href="#tabs-api-jdpay">京东支付</a></li>
+            @*<li><a href="#tabs-api-qpay">QQ钱包</a></li>
+            <li><a href="#tabs-api-jdpay">京东支付</a></li>*@
             <li><a href="#tabs-api-unionpay">银联支付</a></li>
         </ul>
         <div id="tabs-api-1">
             <h3>支付平台 官方文档：</h3>
             <p>支付宝：<a href="https://openhome.alipay.com/developmentDocument.htm" target="_blank">文档中心</a>、<a href="https://open.alipay.com/support/supportCenter.htm" target="_blank">技术支持中心</a>、<a href="https://openclub.alipay.com/index.php" target="_blank">开发者社区</a></p>
             <p>微信支付：<a href="https://pay.weixin.qq.com/wiki/doc/api/index.html" target="_blank">开发文档</a>、<a href="http://wxpay.wxutil.com/qa/index.php" target="_blank">问答中心</a>、<a href="http://kf.qq.com/product/wechatpaymentmerchant.html" target="_blank">帮助中心</a></p>
-            <p>QQ钱包：<a href="https://qpay.qq.com/qpaywiki.shtml" target="_blank">开发文档</a>、<a href="http://kf.qq.com/product/qq_enterprise.html" target="_blank">帮助中心</a></p>
-            <p>京东支付：<a href="http://payapi.jd.com/" target="_blank">开发文档</a></p>
+            @*<p>QQ钱包：<a href="https://qpay.qq.com/qpaywiki.shtml" target="_blank">开发文档</a>、<a href="http://kf.qq.com/product/qq_enterprise.html" target="_blank">帮助中心</a></p>
+            <p>京东支付：<a href="http://payapi.jd.com/" target="_blank">开发文档</a></p>*@
             <p>银联支付：<a href="https://open.unionpay.com/ajweb/product" target="_blank">开放平台</a></p>
             <h3>QQ交流群：</h3>
             <p><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=5b90bb440c4396b282ad30aac8bb8cd13e627f092deb83d7e6c2a638ab11f690"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="ICanPay 交流群" title="ICanPay 交流群"></a></p>
@@ -828,7 +828,7 @@
 
             </div>
         </div>
-        <div id="tabs-api-qpay">
+        @*<div id="tabs-api-qpay">
             <div id="tabs-purchase-qpay">
                 <ul>
                     <li><a href="#tabs-purchase-1">扫码支付</a></li>
@@ -1224,7 +1224,7 @@
                 </div>
 
             </div>
-        </div>
+        </div>*@
         <div id="tabs-api-unionpay">
             <div id="tabs-purchase-unionpay">
                 <ul>
