--- a/sample/ICanPay.Demo/Views/Home/Index.cshtml
+++ b/sample/ICanPay.Demo/Views/Home/Index.cshtml
@@ -478,7 +478,7 @@
                     </p>
                 </div>
                 <div id="tabs-purchase-2">
-                    <form class="api-form" asp-controller="WeChatPay" asp-action="UnifiedOrder" method="post" target="_blank">
+                    <form class="api-form" asp-controller="WeChatPay" asp-action="PublicPay" method="post" target="_blank">
                         <p>
                             <label>订单号：</label>
                             <input type="text" name="out_trade_no" value="@DateTime.Now.ToString("yyyyMMddHHmmssfff")">
@@ -488,24 +488,12 @@
                             <input type="text" name="body" value="微信公众号支付支付测试">
                         </p>
                         <p>
-                            <label>total_fee：</label>
-                            <input type="text" name="total_fee" value="1" title="单位为分。">
+                            <label>金额：</label>
+                            <input type="text" name="total_amount" value="1" title="单位为分。">
                         </p>
                         <p>
-                            <label>spbill_create_ip：</label>
-                            <input type="text" name="spbill_create_ip" value="127.0.0.1">
-                        </p>
-                        <p>
-                            <label>notify_url：</label>
-                            <input type="text" name="notify_url" value="http://www.baidu.com/notify/wechatpay">
-                        </p>
-                        <p>
-                            <label>trade_type：</label>
-                            <input type="text" name="trade_type" value="JSAPI">
-                        </p>
-                        <p>
-                            <label>openid：</label>
-                            <input type="text" name="openid" value="">
+                            <label>用户标识：</label>
+                            <input type="text" name="open_id" value="">
                         </p>
                         <p>
                             <label>&nbsp;</label>
