--- a/sample/ICanPay.Demo/Views/Home/Index.cshtml
+++ b/sample/ICanPay.Demo/Views/Home/Index.cshtml
@@ -496,6 +496,10 @@
                             <input type="text" name="open_id" value="">
                         </p>
                         <p>
+                            <label>用户端IP：</label>
+                            <input type="text" name="spbill_create_ip" value="127.0.0.1">
+                        </p>
+                        <p>
                             <label>&nbsp;</label>
                             <input type="submit" class="button" value="提交">
                         </p>
@@ -506,7 +510,7 @@
                     </p>
                 </div>
                 <div id="tabs-purchase-3">
-                    <form class="api-form" asp-controller="WeChatPay" asp-action="AppOrder" method="post" target="_blank">
+                    <form class="api-form" asp-controller="WeChatPay" asp-action="AppPay" method="post" target="_blank">
                         <p>
                             <label>订单号：</label>
                             <input type="text" name="out_trade_no" value="@DateTime.Now.ToString("yyyyMMddHHmmssfff")">
@@ -516,20 +520,12 @@
                             <input type="text" name="body" value="微信APP支付支付测试">
                         </p>
                         <p>
-                            <label>total_fee：</label>
+                            <label>金额：</label>
                             <input type="text" name="total_fee" value="1" title="单位为分。">
                         </p>
                         <p>
-                            <label>spbill_create_ip：</label>
+                            <label>用户端IP：</label>
                             <input type="text" name="spbill_create_ip" value="127.0.0.1">
-                        </p>
-                        <p>
-                            <label>notify_url：</label>
-                            <input type="text" name="notify_url" value="http://www.baidu.com/notify/wechatpay">
-                        </p>
-                        <p>
-                            <label>trade_type：</label>
-                            <input type="text" name="trade_type" value="APP">
                         </p>
                         <p>
                             <label>&nbsp;</label>
@@ -592,7 +588,7 @@
                             <input type="text" name="out_trade_no">
                         </p>
                         <p>
-                            <label>total_fee：</label>
+                            <label>金额：</label>
                             <input type="text" name="total_fee" value="1" title="单位为分。">
                         </p>
                         <p>
