--- a/sample/ICanPay.Demo/Views/Home/Index.cshtml
+++ b/sample/ICanPay.Demo/Views/Home/Index.cshtml
@@ -427,6 +427,7 @@
             <div id="tabs-purchase-wechatpay">
                 <ul>
                     <li><a href="#tabs-purchase-1">扫码支付</a></li>
+                    <li><a href="#tabs-purchase-17">条码支付</a></li>
                     <li><a href="#tabs-purchase-2">公众号支付</a></li>
                     <li><a href="#tabs-purchase-3">APP支付</a></li>
                     <li><a href="#tabs-purchase-15">小程序支付</a></li>
@@ -436,15 +437,15 @@
                     <li><a href="#tabs-purchase-6">申请退款</a></li>
                     <li><a href="#tabs-purchase-7">查询退款</a></li>
                     <li><a href="#tabs-purchase-8">下载对账单</a></li>
+                    <li><a href="#tabs-purchase-14">下载资金账单</a></li>
                     <li><a href="#tabs-purchase-9">企业付款到零钱</a></li>
                     <li><a href="#tabs-purchase-10">查询付款</a></li>
                     <li><a href="#tabs-purchase-11">获取RSA加密公钥</a></li>
                     <li><a href="#tabs-purchase-12">企业付款到银行卡</a></li>
                     <li><a href="#tabs-purchase-13">查询企业付款银行卡</a></li>
-                    <li><a href="#tabs-purchase-14">下载资金账单</a></li>
                 </ul>
                 <div id="tabs-purchase-1">
-                    <form class="api-form" asp-controller="WeChatPay" asp-action="UnifiedOrder" method="post" target="_blank">
+                    <form class="api-form" asp-controller="WeChatPay" asp-action="ScanPay" method="post" target="_blank">
                         <p>
                             <label>订单号：</label>
                             <input type="text" name="out_trade_no" value="@DateTime.Now.ToString("yyyyMMddHHmmssfff")">
@@ -454,16 +455,8 @@
                             <input type="text" name="body" value="微信扫码支付测试">
                         </p>
                         <p>
-                            <label>total_fee：</label>
-                            <input type="text" name="total_fee" value="1" title="单位为分。">
-                        </p>
-                        <p>
-                            <label>notify_url：</label>
-                            <input type="text" name="notify_url" value="http://www.baidu.com/notify/wechatpay">
-                        </p>
-                        <p>
-                            <label>trade_type：</label>
-                            <input type="text" name="trade_type" value="NATIVE">
+                            <label>金额：</label>
+                            <input type="text" name="total_amount" value="1" title="单位为分。">
                         </p>
                         <p>
                             <label>&nbsp;</label>
@@ -475,6 +468,36 @@
                         <a href="https://pay.weixin.qq.com/wiki/doc/api/native.php?chapter=9_1" target="_blank">* 查看接口 请求参数、响应参数</a>
                     </p>
                 </div>
+
+                <div id="tabs-purchase-17">
+                    <form class="api-form" asp-controller="WeChatPay" asp-action="BarcodePay" method="post" target="_blank">
+                        <p>
+                            <label>订单号：</label>
+                            <input type="text" name="out_trade_no" value="@DateTime.Now.ToString("yyyyMMddHHmmssfff")">
+                        </p>
+                        <p>
+                            <label>订单描述：</label>
+                            <input type="text" name="body" value="微信条码支付测试">
+                        </p>
+                        <p>
+                            <label>金额：</label>
+                            <input type="text" name="total_amount" value="1" title="单位为分。">
+                        </p>
+                        <p>
+                            <label>授权码：</label>
+                            <input type="text" name="auth_code" title="扫码支付授权码，设备读取用户微信中的条码或者二维码信息（注：用户刷卡条形码规则：18位纯数字，以10、11、12、13、14、15开头）">
+                        </p>
+                        <p>
+                            <label>&nbsp;</label>
+                            <input type="submit" class="button" value="提交">
+                        </p>
+                    </form>
+                    <hr />
+                    <p class="faq">
+                        <a href="https://pay.weixin.qq.com/wiki/doc/api/micropay.php?chapter=9_10&index=1" target="_blank">* 查看接口 请求参数、响应参数</a>
+                    </p>
+                </div>
+
                 <div id="tabs-purchase-2">
                     <form class="api-form" asp-controller="WeChatPay" asp-action="PublicPay" method="post" target="_blank">
                         <p>
@@ -503,6 +526,7 @@
                         <a href="https://pay.weixin.qq.com/wiki/doc/api/jsapi.php?chapter=9_1" target="_blank">* 查看接口 请求参数、响应参数</a>
                     </p>
                 </div>
+
                 <div id="tabs-purchase-3">
                     <form class="api-form" asp-controller="WeChatPay" asp-action="AppPay" method="post" target="_blank">
                         <p>
@@ -630,7 +654,7 @@
                         </p>
                         <p>
                             <label>微信订单号：</label>
-                            <input type="text" name="transaction_id">
+                            <input type="text" name="trade_no">
                         </p>
                         <p>
                             <label>订单号：</label>
@@ -638,11 +662,11 @@
                         </p>
                         <p>
                             <label>金额：</label>
-                            <input type="text" name="total_fee" value="1" title="单位为分。">
+                            <input type="text" name="total_amount" value="1" title="单位为分。">
                         </p>
                         <p>
                             <label>退款金额：</label>
-                            <input type="text" name="refund_fee" value="1" title="单位为分。">
+                            <input type="text" name="refund_amount" value="1" title="单位为分。">
                         </p>
                         <p>
                             <label>退款描述：</label>
@@ -827,18 +851,14 @@
                     </p>
                 </div>
                 <div id="tabs-purchase-14">
-                    <form class="api-form" asp-controller="WeChatPay" asp-action="DownloadFundFlow" method="post" target="_blank">
+                    <form class="api-form" asp-controller="WeChatPay" asp-action="FundFlowDownload" method="post" target="_blank">
                         <p>
-                            <label>bill_date：</label>
-                            <input type="text" name="bill_date">
+                            <label>下载资金账单日期：</label>
+                            <input type="text" name="bill_date" title="格式：yyyyMM">
                         </p>
                         <p>
-                            <label>account_type：</label>
-                            <input type="text" name="account_type">
-                        </p>
-                        <p>
-                            <label>tar_type：</label>
-                            <input type="text" name="tar_type">
+                            <label>资金账户类型：</label>
+                            <input type="text" name="account_type" value="Basic" title="账单的资金来源账户：Basic  基本账户 Operation 运营账户 Fees 手续费账户">
                         </p>
                         <p>
                             <label>&nbsp;</label>
